--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ padding:0px 70px;
 margin-top: 50px;
 }
 
-.form_inscription {
+.form_inscription, .section_compte {
 	padding: 1em;
 	border: 1px solid #CCC;
 	border-radius: 1em;
@@ -53,7 +53,7 @@ margin-top: 50px;
 	display: inline-block;
 }
 
-.form_inscription fieldset {
+.form_inscription fieldset, .section_compte fieldset {
 	padding: 0.35em 0.625em 0.75em;
 	border: 1px solid #CCC;
 	border-radius:1em;
@@ -72,3 +72,8 @@ margin-top: 50px;
 .bouton_sinscrire {
 	padding-top: 2em;
 }
+
+#bouton_modifier {
+	margin-top : 2em;
+}
+
