deconnexion et descritpion
J'ai ajouté une description ouverte de la personne qui s'inscrit et non
une liste et une autre table pour faire ça plus simplement. On peut
aussi se déconnecter

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ padding:25px;
 font-family: Berlin Sans FB;
 }
 
+#bouton_deconnexion {
+	margin-right : 1px;
+}
+
 .pied{
 color:#545453;
 background-image:url("../image/sand.jpg");
@@ -61,6 +65,11 @@ margin-top: 50px;
 	margin: 0px 2px;
 	
 }
+
+#description{
+	margin-left: 150px;
+}
+
 #bouton_inscription {
 	margin-top: 2em; 
 }
