Premières modifications du pied de page
Quelques ajouts de pages web associées au pied de page, ainsi que leur
correspondance sur la feuille de style css pour faciliter la
modification.

--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,22 @@ margin-top: 50px;
 	margin-top : 2em;
 }
 
+.createur {
+	padding: 0.35em 0.625em 0.75em;
+	border: 1px solid #CCC;
+	border-radius:1em;
+	margin: 0px 2px;
+}
+
+.contact{
+	padding: 0.35em 0.625em 0.75em;
+	border: 1px solid #CCC;
+	border-radius:1em;
+	margin: 0px 2px;
+	background-color: #96F1FF;
+}
+
+.aide{
+	
+	
+}
