--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,8 @@ label[for="description"] {
 	padding: 0.35em 0.625em 0.75em;
 	border: 1px solid #CCC;
 	border-radius:1em;
-	margin: 0px 2px;
+	margin: 10px 2px;
+	background-color: #E8D292;
 }
 
 .contact{
@@ -102,7 +103,7 @@ label[for="description"] {
 	border: 1px solid #CCC;
 	border-radius:1em;
 	margin: 0px 2px;
-	background-color: #96F1FF;
+	background-color: #E8D292;
 }
 
 .aide{
