--- a/css/style.css
+++ b/css/style.css
@@ -98,10 +98,21 @@ label[for="description"] {
 	background-color: #E8D292;
 }
 
-.contact, .condition, .conseil, .aide{
+.contact, .condition, .conseil, .aide, .accueil, .faq{
 	padding: 0.35em 0.625em 0.75em;
 	border: 1px solid #CCC;
 	border-radius:1em;
 	margin: 10px 2px;
 	background-color: #E8D292;
+}
+
+#accueil_exemple{
+	font-style: italic;
+	text-decoration: underline;
+	margin: 50px 0px;
+}
+
+.faq_question{
+	font-style: italic;
+	text-decoration: underline;
 }
